--- a/基础笔记.md
+++ b/基础笔记.md
@@ -46,5 +46,14 @@ GOHOSTARCH="amd64"
 go语言中一般不直接使用数组
 
 ## 切片
+```
+arr := [...]int{0, 1, 2, 3, 4, 5, 6, 7}
+s := arr[2:6]
+s[0] = 10
+// Slice本身没有数据，是对底层array的一个view
+// arr的值变为[0, 1, 10, 3, 4, 5, 6, 7]
+
+```
+### Slice的扩展
 
 
