--- a/note_markdown/基础笔记.md
+++ b/note_markdown/基础笔记.md
@@ -55,10 +55,10 @@ s[0] = 10
 
 ```
 ### Slice的扩展
-[代码](./array_iter/array_iter.go)
+[代码](../code_content/array_iter/array_iter.go)
 
 ## Struct
-[代码](./tree/node.go)
+[代码](../code_content/tree/node.go)
 
 ## 封装
 名字一般使用CamelCase
