update learn go

--- a/note_markdown/基础笔记.md
+++ b/note_markdown/基础笔记.md
@@ -73,10 +73,15 @@ main包包含可执行入口
 为结构定义的方法必须放在同一个包内
 可以是不同的文件
 
-#### 如何扩充系统类型或者别人的类型
+### 如何扩充系统类型或者别人的类型
 定义别名
 使用组合
 
+### 内存分配
+[make_and_new](../code_content/make_and_new/make_new.go) , 笔记来源--[陈皓酷壳](https://coolshell.cn/articles/8460.html)
+
+### 接口相关
+[interface_polymorphic](../code_content/go_interface_polymorphic/polymorphic_interface.go)
 
 
 
