--- a/note_markdown/基础笔记.md
+++ b/note_markdown/基础笔记.md
@@ -81,7 +81,10 @@ main包包含可执行入口
 [make_and_new](../code_content/make_and_new/make_new.go) , 笔记来源--[陈皓酷壳](https://coolshell.cn/articles/8460.html)
 
 ### 接口相关
-[interface_polymorphic](../code_content/go_interface_polymorphic/polymorphic_interface.go)
+[接口与多态 interface_polymorphic](../code_content/go_interface_polymorphic/polymorphic_interface.go)
 
+
+### 其他练习
+[go_prac](../code_content/go_base/go_prac.go)
 
 
