update learn go

--- a/note_markdown/基础笔记.md
+++ b/note_markdown/基础笔记.md
@@ -87,4 +87,9 @@ main包包含可执行入口
 ### 其他练习
 [go_prac](../code_content/go_base/go_prac.go)
 
+###问题
+- 为什么Go语言对通道要限制长度而不提供无限长度的通道？
+  > 我们知道通道（channel）是在两个goroutine间通信的桥梁。使用goroutine的代码必然有一方提供数据，一方消费数据。
+  当提供数据一方的数据供给速度大于消费方的数据处理速度时，如果通道不限制长度，那么内存将不断膨胀直到应用崩溃。
+  因此，限制通道的长度有利于约束数据提供方的供给速度，供给数据量必须在**消费方处理量+通道长度**的范围内，才能正常地处理数据。
 
