--- a/note_markdown/基础笔记.md
+++ b/note_markdown/基础笔记.md
@@ -13,6 +13,12 @@
 换镜像： `go env -w GOPROXY=https://goproxy.cn,direct`
 设置go module: `go env -w GO111MODULE=on`
 
+go get 
+```
+-v：打印出被构建的代码包的名字
+-u：已存在相关的代码包，强行更新代码包及其依赖包
+```
+
 ### 注意
 这里我们的on必须是小写的，不是大写ON，也不是1或者true等。
 打错的同学就会碰到这个bug: https://github.com/golang/go/issues/34880 
