--- a/best_prac_explore/content/性能.md
+++ b/best_prac_explore/content/性能.md
@@ -1,6 +1,6 @@
 # 性能调优
 ### reference
 - [ ] [Go语言之pprof性能分析利器](https://www.lixueduan.com/post/go/pprof/)
-
+- [ ] [深入浅出 Go trace](https://mp.weixin.qq.com/s/I9xSMxy32cALSNQAN8wlnQ)
 
 
