--- a/note_markdown/基础笔记.md
+++ b/note_markdown/基础笔记.md
@@ -21,7 +21,8 @@ go get
 
 ### 注意
 这里我们的on必须是小写的，不是大写ON，也不是1或者true等。
-打错的同学就会碰到这个bug: https://github.com/golang/go/issues/34880 
+打错的同学就会碰到这个[bug](https://github.com/golang/go/issues/34880)
+
 它不会告诉你打错了，但是接下来go env, 甚至其它go run, go install等都不能用了。
 
 出错信息是：
